Ajustanto html na parte de agradecimentos

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                     <a href="Anime/anime.html">Anime</a>
                 </section>
 
-                <section class="agradecimentos">
+                <section class="Agradecimentos">
                     <h2 class="titulo-principal">Agradecimentos</h2>
 
-                    <p>Não sei por que fiz essa seção (meus pensamentos são muitos aleatórios as vezes). Entretanto, gostaria de agradecer algumas pessoas aqui.
+                    <p>Acho bacana mencionar algumas pessoas que gosto muito e pra encher linguiça também.
                         Primeiramente o meu avô, ele é pika, tá? Gosto muito dele, ele sempre me ajudou e continua ajudando, espero que um dia ele tenha orgulho de mim.</p>
 
                     <p>E segundamente, um amigo que conheci não faz nem um ano e já considero "pakas" o <a href="https://www.linkedin.com/in/gabriel-teixeira-rocha-pires-393b5721a/">Gabriel</a>.
