--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <header>
-            <h1 class="titulo-principal">Primeira Página by pv#0000FF</h1>
+            <h1 class="logo"><img src="./imagens/logo.png" alt="minha logo"></h1>
         </header>
         <main>
             <div class="caixa">
