Adicionei a linguagem em que o site é direcionado pt-br e adicionei um outro iframe.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="pt-br">
 
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -24,7 +23,8 @@
                         muito complexo e avançado, qualquer critica construtiva estou aceitando, obrigado desde já.</p>
 
                     <p>Música preferida atualmente</p>
-                    <iframe class="spotify" style="border-radius:12px" src="https://open.spotify.com/embed/track/0UtnpKaReKUg2GquaSxCyD?utm_source=generator&theme=0" width="30%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                    <iframe class="spotify" style="border-radius:10px" src="https://open.spotify.com/embed/track/0UtnpKaReKUg2GquaSxCyD?utm_source=generator&theme=0" width="30%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                    <iframe class="gif" src="https://giphy.com/embed/jpbnoe3UIa8TU8LM13" width="80" height="80" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p></p>
                 </section>
 
                 <section class="coisas-curto">
