alterei na seção coisas que curto apenas.

--- a/index.html
+++ b/index.html
@@ -29,11 +29,27 @@
 
                 <section class="coisas-curto">
                     <h2 class="titulo-principal">Coisas que eu curto</h2>
-                    <a href="Videogame/videogame.html">Video Games</a>
-                    <a href="Musica/musica.html">Ouvir Música</a>
-                    <a href="FilmeeSerie/filmeeserie.html">Filmes/Séries</a>
-                    <a href="Esportes/esportes.html">Esportes</a>
-                    <a href="Anime/anime.html">Anime</a>
+                    <div class=caixa-coisas-curto>
+
+                        <div class="card">
+                            <a href="./Videogame/videogame.html"><img class="img" src="./imagens/joysticky.jpg" alt="Imagem de um joysticky" style="width:100%"></a>
+                            <div class="container">
+                                <h4>Jogos Eletrônicos</h4>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <a href="./Esportes/esportes.html"><img class="img" src="./imagens/bolafut.jpg" alt="Imagem de uma bola de futebol" style="width:100%"></a>
+                            <div class="container">
+                                <h4>Esportes</h4>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <a href="./Anime/anime.html"><img class="img" src="./imagens/anime.jpg" alt="Imagem de gatinho da fortuna" style="width:100%"></a>
+                            <div class="container">
+                                <h4>Anime</h4>
+                            </div>
+                        </div>
+                    </div>   
                 </section>
 
                 <section class="Agradecimentos">
