Adicionei redes sociais no header coloquei uma div no sobre mim

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <body>
         <header>
             <h1 class="logo"><img src="./imagens/logo.png" alt="minha logo"></h1>
+            <a href="https://www.twitter.com/pablodelboni"><span class="label twitter">Twitter</span></a>
+            <a href="https://github.com/PabloFDD"><span class="label github">Github</span></a>
+            <a href="https://www.linkedin.com/in/pablo-felipe-delboni-dornele-91803214a/"><span class="label linkedin">Linkedin</span></a>      
         </header>
         <main>
             <div class="caixa">
@@ -21,10 +24,11 @@
 
                     <p>Está página não tem nenhum proposito, estou apenas brincando com o que aprendi até então. Apenas sei o básico sobre HTML e CSS, ou seja, não espere algo
                         muito complexo e avançado, qualquer critica construtiva estou aceitando, obrigado desde já.</p>
-
-                    <p>Música preferida atualmente</p>
-                    <iframe class="spotify" style="border-radius:10px" src="https://open.spotify.com/embed/track/0UtnpKaReKUg2GquaSxCyD?utm_source=generator&theme=0" width="30%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                    <iframe class="gif" src="https://giphy.com/embed/jpbnoe3UIa8TU8LM13" width="80" height="80" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p></p>
+                    <div class="caixa-sobre-mim">
+                        <p>Música preferida atualmente</p>
+                        <iframe class="spotify" style="border-radius:10px" src="https://open.spotify.com/embed/track/0UtnpKaReKUg2GquaSxCyD?utm_source=generator&theme=0" width="30%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                        <iframe class="gif" src="https://giphy.com/embed/jpbnoe3UIa8TU8LM13" width="80" height="80" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+                    </div>
                 </section>
 
                 <section class="coisas-curto">
@@ -52,10 +56,10 @@
                     </div>   
                 </section>
 
-                <section class="Agradecimentos">
+                <section class="agradecimentos">
                     <h2 class="titulo-principal">Agradecimentos</h2>
 
-                    <p>Acho bacana mencionar algumas pessoas que gosto muito e pra encher linguiça também.
+                    <p>Acho bacana mencionar algumas pessoas que gosto muito e para encher linguiça também.
                         Primeiramente o meu avô, ele é pika, tá? Gosto muito dele, ele sempre me ajudou e continua ajudando, espero que um dia ele tenha orgulho de mim.</p>
 
                     <p>E segundamente, um amigo que conheci não faz nem um ano e já considero "pakas" o <a href="https://www.linkedin.com/in/gabriel-teixeira-rocha-pires-393b5721a/">Gabriel</a>.
@@ -67,7 +71,7 @@
 
         <footer>
 
-            <p><p class="copyright">&copy;Copyright - 2022, Pablo Felipe. Todos os direitos reservados.</p></p> 
+            <p class="copyright">&copy;Copyright - 2022, Pablo Felipe. Todos os direitos reservados.</p>
 
         </footer>
 
