removi o gif e melhorei o header

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     </head>
 
     <body>
-        <header>
+        <header class="cabecalho">
             <h1 class="logo"><img src="./imagens/logo.png" alt="minha logo"></h1>
-            <a href="https://www.twitter.com/pablodelboni"><span class="label twitter">Twitter</span></a>
-            <a href="https://github.com/PabloFDD"><span class="label github">Github</span></a>
-            <a href="https://www.linkedin.com/in/pablo-felipe-delboni-dornele-91803214a/"><span class="label linkedin">Linkedin</span></a>      
+            <span class="social-media">
+                <a href="https://www.twitter.com/pablodelboni"><img src="./imagens/twitterlogo.svg"></a>
+                <a href="https://www.github.com/PabloFDD"><img src="./imagens/githublogo.svg"></a>
+                <a href="https://www.linkedin.com/in/pablo-felipe-delboni-dornele-91803214a/"><img src="./imagens/linkedinlogo.svg"></a>
+            </span>
         </header>
         <main>
             <div class="caixa">
@@ -27,7 +29,6 @@
                     <div class="caixa-sobre-mim">
                         <p>Música preferida atualmente</p>
                         <iframe class="spotify" style="border-radius:10px" src="https://open.spotify.com/embed/track/0UtnpKaReKUg2GquaSxCyD?utm_source=generator&theme=0" width="30%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                        <iframe class="gif" src="https://giphy.com/embed/jpbnoe3UIa8TU8LM13" width="80" height="80" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
                     </div>
                 </section>
 
