commit dia 31/07 sem net

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
+		<title>Home</title>
     </head>
 
     <body>
@@ -22,12 +23,22 @@
                     <h2 class="titulo-principal">Sobre mim</h2>
 
                     <img src="./imagens/perfil.jpg" alt="foto de anime aleatorio apenas ilustrativa">
-                    <p>Olá, me chamo Pablo, tenho 23 anos, sou natural de <a href="https://www.google.com.br/maps/place/Jales,+State+of+S%C3%A3o+Paulo/@-20.2697159,-50.5446543,13z/data=!3m1!4b1!4m5!3m4!1s0x94982f2e0019f875:0x8ad800dad6083108!8m2!3d-20.2686874!4d-50.5490441">Jales - SP</a> e estou estudando programação, mais precisamente o Front-end!</p>
+                    <p class="paragrafo">Olá, me chamo Pablo, tenho 23 anos, sou natural de <a href="https://www.google.com.br/maps/place/Jales,+State+of+S%C3%A3o+Paulo/@-20.2697159,-50.5446543,13z/data=!3m1!4b1!4m5!3m4!1s0x94982f2e0019f875:0x8ad800dad6083108!8m2!3d-20.2686874!4d-50.5490441">Jales - SP</a>.
 
-                    <p>Está página não tem nenhum proposito, estou apenas brincando com o que aprendi até então. Apenas sei o básico sobre HTML e CSS, ou seja, não espere algo
+                    <p class="paragrafo">Está página não tem nenhum proposito, estou apenas brincando com o que aprendi até então. Apenas sei o básico sobre HTML e CSS, ou seja, não espere algo
                         muito complexo e avançado, qualquer critica construtiva estou aceitando, obrigado desde já.</p>
+
+                    <p class="paragrafo">Eu comecei nesse mundo da programação no segundo semestre de 2018,
+                        eu entrei na Fatec de Jales entretanto não cheguei a terminar o curso, eu tive que trancar
+                        pois surgiu uma oportunidade de emprego no final de 2020(não relacionada a área de T.I).
+                        Eu estava um pouco desanimado com o curso e só queria trabalhar mesmo.</p>
+
+                    <p class="paragrafo">Em junho de 2022 eu voltei para essa área da programação pra ser mais especifíco,
+                        a parte do front-end, que foi a que eu mais gostei.(Sim, eu gosto de pintar botões como descobriu?)
+						E um amigo que conheci a menos de 1 ano me deu o "empurrão" que faltava para voltar. Obrigado <a href="https://www.linkedin.com/in/gabriel-teixeira-rocha-pires-393b5721a/">Gabriel</a>, de verdade.
+                    </p>
                     <div class="caixa-sobre-mim">
-                        <p>Música preferida atualmente</p>
+                        <p class="paragrafo">Música preferida atualmente</p>
                         <iframe class="spotify" style="border-radius:10px" src="https://open.spotify.com/embed/track/0UtnpKaReKUg2GquaSxCyD?utm_source=generator&theme=0" width="30%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                     </div>
                 </section>
@@ -56,17 +67,6 @@
                         </div>
                     </div>   
                 </section>
-
-                <section class="agradecimentos">
-                    <h2 class="titulo-principal">Agradecimentos</h2>
-
-                    <p>Acho bacana mencionar algumas pessoas que gosto muito e para encher linguiça também.
-                        Primeiramente o meu avô, ele é pika, tá? Gosto muito dele, ele sempre me ajudou e continua ajudando, espero que um dia ele tenha orgulho de mim.</p>
-
-                    <p>E segundamente, um amigo que conheci não faz nem um ano e já considero "pakas" o <a href="https://www.linkedin.com/in/gabriel-teixeira-rocha-pires-393b5721a/">Gabriel</a>.
-                        Pra ser sincero ele foi o ultimo empurrão que eu precisva pra voltar a estudar o que gosto, e sou muito grato por ele, nunca vou esquecer isso.</p>
-                </section>
-
             </div>
         </main>
 
