segundo commit dia 31/07 sem net

--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-
 <html lang="pt-br">
-
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" href="./css/style.css">
 		<title>Home</title>
     </head>
-
     <body>
         <header class="cabecalho">
             <h1 class="logo"><img src="./imagens/logo.png" alt="minha logo"></h1>
@@ -23,13 +20,13 @@
                     <h2 class="titulo-principal">Sobre mim</h2>
 
                     <img src="./imagens/perfil.jpg" alt="foto de anime aleatorio apenas ilustrativa">
-                    <p class="paragrafo">Olá, me chamo Pablo, tenho 23 anos, sou natural de <a href="https://www.google.com.br/maps/place/Jales,+State+of+S%C3%A3o+Paulo/@-20.2697159,-50.5446543,13z/data=!3m1!4b1!4m5!3m4!1s0x94982f2e0019f875:0x8ad800dad6083108!8m2!3d-20.2686874!4d-50.5490441">Jales - SP</a>.
+                    <p class="paragrafo">Olá, me chamo Pablo, tenho 23 anos e sou natural de <a href="https://www.google.com.br/maps/place/Jales,+State+of+S%C3%A3o+Paulo/@-20.2697159,-50.5446543,13z/data=!3m1!4b1!4m5!3m4!1s0x94982f2e0019f875:0x8ad800dad6083108!8m2!3d-20.2686874!4d-50.5490441">Jales - SP</a>.
 
                     <p class="paragrafo">Está página não tem nenhum proposito, estou apenas brincando com o que aprendi até então. Apenas sei o básico sobre HTML e CSS, ou seja, não espere algo
                         muito complexo e avançado, qualquer critica construtiva estou aceitando, obrigado desde já.</p>
 
                     <p class="paragrafo">Eu comecei nesse mundo da programação no segundo semestre de 2018,
-                        eu entrei na Fatec de Jales entretanto não cheguei a terminar o curso, eu tive que trancar
+                        eu entrei na <a href="">Fatec Jales</a> entretanto não cheguei a terminar o curso, eu tive que trancar
                         pois surgiu uma oportunidade de emprego no final de 2020(não relacionada a área de T.I).
                         Eu estava um pouco desanimado com o curso e só queria trabalhar mesmo.</p>
 
@@ -39,43 +36,37 @@
                     </p>
                     <div class="caixa-sobre-mim">
                         <p class="paragrafo">Música preferida atualmente</p>
-                        <iframe class="spotify" style="border-radius:10px" src="https://open.spotify.com/embed/track/0UtnpKaReKUg2GquaSxCyD?utm_source=generator&theme=0" width="30%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                        <iframe class="spotify" src="https://open.spotify.com/embed/track/0UtnpKaReKUg2GquaSxCyD?utm_source=generator&theme=0" width="30%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                     </div>
                 </section>
-
                 <section class="coisas-curto">
                     <h2 class="titulo-principal">Coisas que eu curto</h2>
                     <div class=caixa-coisas-curto>
 
                         <div class="card">
-                            <a href="./Videogame/videogame.html"><img class="img" src="./imagens/joysticky.jpg" alt="Imagem de um joysticky" style="width:100%"></a>
+                            <a href="videogame.html"><img class="img" src="./imagens/joysticky.jpg" alt="Imagem de um joysticky" style="width:100%"></a>
                             <div class="container">
                                 <h4>Jogos Eletrônicos</h4>
                             </div>
                         </div>
                         <div class="card">
-                            <a href="./Esportes/esportes.html"><img class="img" src="./imagens/bolafut.jpg" alt="Imagem de uma bola de futebol" style="width:100%"></a>
+                            <a href="esportes.html"><img class="img" src="./imagens/bolafut.jpg" alt="Imagem de uma bola de futebol" style="width:100%"></a>
                             <div class="container">
                                 <h4>Esportes</h4>
                             </div>
                         </div>
                         <div class="card">
-                            <a href="./Anime/anime.html"><img class="img" src="./imagens/anime.jpg" alt="Imagem de gatinho da fortuna" style="width:100%"></a>
+                            <a href="anime.html"><img class="img" src="./imagens/anime.jpg" alt="Imagem de gatinho da fortuna" style="width:100%"></a>
                             <div class="container">
-                                <h4>Anime</h4>
+                                <h4>Animes</h4>
                             </div>
                         </div>
                     </div>   
                 </section>
             </div>
         </main>
-
         <footer>
-
             <p class="copyright">&copy;Copyright - 2022, Pablo Felipe. Todos os direitos reservados.</p>
-
         </footer>
-
     </body>
-
 </html>
