commit 01/08 sem net

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                         muito complexo e avançado, qualquer critica construtiva estou aceitando, obrigado desde já.</p>
 
                     <p class="paragrafo">Eu comecei nesse mundo da programação no segundo semestre de 2018,
-                        eu entrei na <a href="">Fatec Jales</a> entretanto não cheguei a terminar o curso, eu tive que trancar
+                        entrei na <a href="">Fatec Jales</a>, entretanto não cheguei a terminar o curso, eu tive que trancar
                         pois surgiu uma oportunidade de emprego no final de 2020(não relacionada a área de T.I).
-                        Eu estava um pouco desanimado com o curso e só queria trabalhar mesmo.</p>
+                        Eu estava um pouco desanimado com o curso e resolvi tentar pegar essa vaga de trabalho.</p>
 
-                    <p class="paragrafo">Em junho de 2022 eu voltei para essa área da programação pra ser mais especifíco,
+                    <p class="paragrafo">Em junho de 2022 eu voltei para essa área da programação, pra ser mais especifíco,
                         a parte do front-end, que foi a que eu mais gostei.(Sim, eu gosto de pintar botões como descobriu?)
 						E um amigo que conheci a menos de 1 ano me deu o "empurrão" que faltava para voltar. Obrigado <a href="https://www.linkedin.com/in/gabriel-teixeira-rocha-pires-393b5721a/">Gabriel</a>, de verdade.
                     </p>
