--- a/videogame.html
+++ b/videogame.html
@@ -25,7 +25,7 @@
                         <a href="">Pro Evolution Soccer</a>, o famoso 'PES'. 
                         Entretanto depois que minha avó comprou um computador e colocou internet 
                         eu comecei a fuçar e descobri o famoso e nostalgico <a href="">Grand Chase</a> ou para os íntimos "GC"(era main Jin).
-                        Passei muito tempo da minha jogando esse jogo e vários outros que a empresa Level Up! trouxe,
+                        Passei muito tempo da minha vida jogando esse jogo e vários outros que a empresa Level Up! trouxe,
                         como o <a href="">Lunia ou Lunia Z</a>, <a href="">Perfect World</a> e <a href="">Combat Arms</a>, 
                         futuramente com uns 10-11 anos um amigo meu me mostrou o <a href="">Mu</a>, esse jogo era fenômenal, 
                         era inacreditável o quão divertido era.
@@ -55,7 +55,7 @@
                     <h2 class="tituloJogos">Competitivo e Pro Players</h2>
                     <p class="paragrafo">
                         Como eu disse antes, sou competitivo, então quando eu gosto de um jogo e quando tem algum time
-                        brasileiro gosto de assistir o alto nível desse jogo como por exemplo Apex Legends e LOL.
+                        brasileiro, gosto de assistir o alto nível desse jogo como por exemplo Apex Legends e LOL.
                         Não torço pra nenhuma organização de jogos eletrônicos, e sim para jogadores, sou muito fã do <a href="">Brtt</a>,
                         <a href="">Revolta</a>, <a href="">Ninext</a> e do <a href="">Fallen</a>, para mim eles são grandes pessoas e grandes profissionais.
                         Entretanto se tiver uma equipe brasileira em algum campeonato internacional, sempre irei apoiar.
