commit 02/08, alterei a aba videogame.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         muito complexo e avançado, qualquer critica construtiva estou aceitando, obrigado desde já.</p>
 
                     <p class="paragrafo">Eu comecei nesse mundo da programação no segundo semestre de 2018,
-                        entrei na <a href="">Fatec Jales</a>, entretanto não cheguei a terminar o curso, eu tive que trancar
+                        entrei na <a href="https://www.fatecjales.edu.br/">Fatec Jales</a>, entretanto não cheguei a terminar o curso, eu tive que trancar
                         pois surgiu uma oportunidade de emprego no final de 2020(não relacionada a área de T.I).
                         Eu estava um pouco desanimado com o curso e resolvi tentar pegar essa vaga de trabalho.</p>
 
