--- a/videogame.html
+++ b/videogame.html
@@ -20,19 +20,20 @@
                 <section>
                     <h2 class="tituloJogos">Jogos Eletrônicos</h2>
                     <p class="paragrafo">Essa página é destinada a uma parte que ocupa e ocupou muito a minha vida,
-                        desde criança eu tenho contato com video games/jogos, o primeiro jogo que joguei foi um <a href="">Inazuma
-                        Eleven</a> na casa de um amigo, que hoje se não me engano mudaram o nome para 
-                        <a href="">Pro Evolution Soccer</a>, o famoso 'PES'. 
+                        desde criança eu tenho contato com video games/jogos, o primeiro jogo que joguei foi um Winning
+                        Eleven na casa de um amigo, que hoje se não me engano mudaram o nome para 
+                        <a href="https://en.wikipedia.org/wiki/Pro_Evolution_Soccer">Pro Evolution Soccer</a>, o famoso 'PES'. 
                         Entretanto depois que minha avó comprou um computador e colocou internet 
-                        eu comecei a fuçar e descobri o famoso e nostalgico <a href="">Grand Chase</a> ou para os íntimos "GC"(era main Jin).
+                        eu comecei a fuçar e descobri o famoso e nostalgico <a href="https://www.youtube.com/watch?v=I7oHgR4s1rc&ab_channel=GrandChase">Grand Chase</a> ou para os íntimos "GC"(era main Jin).
                         Passei muito tempo da minha vida jogando esse jogo e vários outros que a empresa Level Up! trouxe,
-                        como o <a href="">Lunia ou Lunia Z</a>, <a href="">Perfect World</a> e <a href="">Combat Arms</a>, 
-                        futuramente com uns 10-11 anos um amigo meu me mostrou o <a href="">Mu</a>, esse jogo era fenômenal, 
+                        como o <a href="https://www.youtube.com/watch?v=UIJIoA9vmHk&ab_channel=MMOHuts">Lunia ou Lunia Z</a>, 
+                        <a href="https://www.youtube.com/watch?v=jjPcgaz-uIM&ab_channel=PerfectWorld-LevelUp">Perfect World</a> e <a href="https://www.youtube.com/watch?v=IERNlnCKWvM&ab_channel=MMOHuts">Combat Arms</a>, 
+                        futuramente com uns 10-11 anos um amigo meu me mostrou o <a href="https://www.youtube.com/watch?v=H5QQDvgU-hE&ab_channel=MUonlineofficial">Mu</a>, esse jogo era fenômenal, 
                         era inacreditável o quão divertido era.
                     </p>
                     <p class="paragrafo">Você provavelmente deve ter notado que nao citei nenhum jogo com modo história
                         e sim, eu nunca fui de jogar jogos de história offline, achava muito chato e entediante, entretanto
-                        já zerei alguns famosos como God of War(PS2) e Need for Speed: Most Wanted, já zerei outros mas não vale a citação.
+                        já zerei alguns famosos como God of War(PS2) e Need for Speed: Most Wanted, já zerei outros mas não quero me prolongar muito.
                         sinceramente eu sou muito competitivo e gosto de disputar contra outros jogadores, talvez por isso
                         nao vejo graça em jogos com modo história.
                     </p>
@@ -42,13 +43,13 @@
 
                     <p class="paragrafo">Irei fazer uma citação dos melhores jogos para mim por cada genêro:</p>
                     <ul class="listaJogos">
-                        <li>FPS: <a href="apexlegends.com">Apex Legends</a> e <a href="">CS:GO</a></li>
-                        <li>Moba: <a href="apexlegends.com">League of Legends</a></li>
-                        <li>MMORPG: <a href="apexlegends.com">Archeage</a> e <a href="apexlegends.com">Perfect World</a></li>
-                        <li>Hacking n Slash: <a href="apexlegends.com">God Of War</a> e <a href="apexlegends.com">Devil May Cry</a></li>
-                        <li>Esporte: <a href="apexlegends.com">FIFA</a></li>
-                        <li>Corrida: <a href="apexlegends.com">Need for speed: Most Wanted</a></li>
-                        <li>Luta: <a href="apexlegends.com">Street Fighter</a></li>
+                        <li>FPS: <a href="https://www.ea.com/pt-br/games/apex-legends">Apex Legends</a> e <a href="https://blog.counter-strike.net/">CS:GO</a></li>
+                        <li>Moba: <a href="https://www.leagueoflegends.com/pt-br/">League of Legends</a></li>
+                        <li>MMORPG: <a href="https://archeage.playkakaogames.com/">Archeage</a> e <a href="https://perfectworld.com.br/">Perfect World</a></li>
+                        <li>Hacking n Slash: <a href="https://pt.wikipedia.org/wiki/God_of_War">God Of War</a> e <a href="https://pt.wikipedia.org/wiki/Devil_May_Cry">Devil May Cry</a></li>
+                        <li>Esporte: <a href="https://www.ea.com/pt-br/games/fifa">FIFA</a></li>
+                        <li>Corrida: <a href="https://en.wikipedia.org/wiki/Need_for_Speed:_Most_Wanted_(2005_video_game)">Need for speed: Most Wanted</a></li>
+                        <li>Luta: <a href="https://www.streetfighter.com/en/">Street Fighter</a></li>
                     </ul>
                 </section>
                 <section>
@@ -56,8 +57,8 @@
                     <p class="paragrafo">
                         Como eu disse antes, sou competitivo, então quando eu gosto de um jogo e quando tem algum time
                         brasileiro, gosto de assistir o alto nível desse jogo como por exemplo Apex Legends e LOL.
-                        Não torço pra nenhuma organização de jogos eletrônicos, e sim para jogadores, sou muito fã do <a href="">Brtt</a>,
-                        <a href="">Revolta</a>, <a href="">Ninext</a> e do <a href="">Fallen</a>, para mim eles são grandes pessoas e grandes profissionais.
+                        Não torço pra nenhuma organização de jogos eletrônicos, e sim para jogadores, sou muito fã do <a href="https://liquipedia.net/leagueoflegends/BrTT">Brtt</a>,
+                        <a href="https://liquipedia.net/leagueoflegends/Revolta">Revolta</a>, <a href="https://liquipedia.net/rainbowsix/NinexT">Ninext</a> e do <a href="https://liquipedia.net/counterstrike/FalleN">Fallen</a>, para mim eles são grandes pessoas e grandes profissionais.
                         Entretanto se tiver uma equipe brasileira em algum campeonato internacional, sempre irei apoiar.
                     </p>
                 </section>
